R: fixed x-overflow and dropdown menu

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,13 +9,16 @@ $gray-light:             lighten($gray-base, 46.7%) !default; // #777
 $gray-lighter:           lighten($gray-base, 93.5%) !default;
 $state-danger-text: #a94442 !default;
 
-@mixin box_sizing {
-  -moz-box-sizing:    border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing:         border-box;
-}
 
 /* universal */
+
+html,body
+{
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+}
 
 textarea {
   resize: vertical;
@@ -130,7 +133,6 @@ footer {
   float: left;
   width: 100%;
   margin-top: 45px;
-  @include box_sizing;
 }
 
 /* gravatar */
@@ -172,7 +174,6 @@ footer {
 input, textarea, select, .uneditable-input {
   border: 1px solid #bbb;
   width: 100%;
-  @include box_sizing;
 }
 
 input {
@@ -473,9 +474,6 @@ input {
   background: transparent !important;
 }
 
-.dropdown-menu {
-  min-width: 1rem !important;
-}
 
 /* card */
 .card-footer {
